--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.leuphana.escience</groupId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <artifactId>dspace-pure-bridge</artifactId>
     <packaging>jar</packaging>
     <name>DspacePureBridge</name>
@@ -17,7 +17,7 @@
     <scm>
         <connection>scm:git:git@gitlab.leuphana.de:escience/dspace-pure-bridge.git</connection>
         <url>https://gitlab.leuphana.de/escience/dspace-pure-bridge</url>
-        <tag>1.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <build>
