--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.leuphana.escience</groupId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.3.0-SNAPSHOT</version>
     <artifactId>dspace-pure-bridge</artifactId>
     <packaging>jar</packaging>
     <name>DspacePureBridge</name>
@@ -10,17 +10,30 @@
 
     <licenses>
         <license>
-            <name>GPL-3.0</name>
+            <name>BSD 3-Clause License</name>
+            <url>https://opensource.org/licenses/BSD-3-Clause</url>
+            <distribution>repo</distribution>
         </license>
     </licenses>
 
     <scm>
-        <connection>scm:git:git@gitlab.leuphana.de:escience/dspace-pure-bridge.git</connection>
-        <url>https://gitlab.leuphana.de/escience/dspace-pure-bridge</url>
-        <tag>HEAD</tag>
+        <connection>scm:git:git@github.com:leuphana/dspace-pure-bridge.git</connection>
+        <url>https://github.com/leuphana/dspace-pure-bridge</url>
     </scm>
 
     <build>
+        <resources>
+            <resource>
+                <directory>${project.basedir}</directory>
+                <includes>
+                    <include>LICENSE</include>
+                </includes>
+                <targetPath>META-INF</targetPath>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
         <extensions>
             <extension>
                 <groupId>org.apache.maven.extensions</groupId>
@@ -60,7 +73,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>3.0.1</version> <!-- oder die von dir verwendete Version -->
+                <version>3.2.0</version>
                 <configuration>
                     <pushChanges>false</pushChanges>
                     <tagNameFormat>@{project.version}</tagNameFormat>
