--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.leuphana.escience</groupId>
-    <version>1.3.0-SNAPSHOT</version>
+    <version>1.3.0</version>
     <artifactId>dspace-pure-bridge</artifactId>
     <packaging>jar</packaging>
     <name>DspacePureBridge</name>
@@ -19,7 +19,8 @@
     <scm>
         <connection>scm:git:git@github.com:leuphana/dspace-pure-bridge.git</connection>
         <url>https://github.com/leuphana/dspace-pure-bridge</url>
-    </scm>
+      <tag>1.3.0</tag>
+  </scm>
 
     <build>
         <resources>
